# TradingBot_AngelOne

./: .env  .env.180rule.sample  .env.orb.sample  .env.vercel  .gitignore  Procfile  conftest.py  diag_20d.py  diag_test.py  live_analysis.py  pyproject.toml  railway.json  requirements.txt  run_180_reversal.py  run_autotrade.py  run_orb_strategy.py  server.py  show_results.py  vercel.json  vercel_runtime_log.txt
.github/agents/: deployment-monitor.agent.md
.github/workflows/: autotrade-cron.yml  vercel-preview-pr.yml  vercel-prod-auto.yml
api/: index.py
api/cron/: autotrade.py
config/: auto_config.json
scripts/: analyze_trades.py  daily_pipeline.py  update_config.py
trading_bot/: autotrade.py  cache.py  candle_cache.py  config.py  main.py  redis_sync.py  trading_bot.db  trading_bot.db-shm  trading_bot.db-wal
trading_bot/auth/: login.py
trading_bot/candles/: __init__.py
trading_bot/dashboard/: server.py
trading_bot/data/: historical.py  nifty_options_cache.json  store.py
trading_bot/indicators/: __init__.py
trading_bot/llm/: __init__.py  analyzer.py
trading_bot/market/: __init__.py
trading_bot/options/: __init__.py
trading_bot/orb_strategy/: __init__.py  config.py  data_handler.py  execution_engine.py  main.py  risk_manager.py  strategy_orb.py
trading_bot/reversal180/: __init__.py  backtest.py  config.py  data_feed.py  detector.py  engine.py  models.py  orb.py  order_manager.py  risk.py  trade_logger.py
trading_bot/scoring/: __init__.py
trading_bot/strategy/: __init__.py
trading_bot/tests/: test_login.py
trading_bot/utils/: logger.py  (+1 more)
(+19 files in other folders)
